Move AvaloniaMetricsPublisher to a separate project

--- a/Metriclonia.Producer/Metriclonia.Producer.csproj
+++ b/Metriclonia.Producer/Metriclonia.Producer.csproj
@@ -20,4 +20,8 @@
       <PrivateAssets Condition="'$(Configuration)' != 'Debug'">All</PrivateAssets>
     </PackageReference>
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Metriclonia.Diagnostics\Metriclonia.Diagnostics.csproj" />
+  </ItemGroup>
 </Project>
