--- a/Metriclonia.Diagnostics/Metriclonia.Diagnostics.csproj
+++ b/Metriclonia.Diagnostics/Metriclonia.Diagnostics.csproj
@@ -6,5 +6,6 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Avalonia" Version="11.3.6" />
+    <PackageReference Include="System.Formats.Cbor" Version="9.0.0" />
   </ItemGroup>
 </Project>
