--- a/Metriclonia.Monitor/Metriclonia.Monitor.csproj
+++ b/Metriclonia.Monitor/Metriclonia.Monitor.csproj
@@ -20,5 +20,6 @@
       <PrivateAssets Condition="'$(Configuration)' != 'Debug'">All</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="9.0.9" />
+    <PackageReference Include="System.Formats.Cbor" Version="9.0.0" />
   </ItemGroup>
 </Project>
